--- a/index-ger.html
+++ b/index-ger.html
@@ -49,7 +49,7 @@
                   <div class="dropdown-content">
                     <li><a href="index.html">SRB</a></li>
                     <li><a href="index-ger.html">GER</a></li>
-                    <li><a href="first.html">ENG</a></li>
+                    <li><a href="index-english.html">ENG</a></li>
                   </div>
                 </ul>
               </div>
@@ -96,7 +96,7 @@
           </div>
           <div class="row justify-content-center">
             <div class="col-md-11 mx-0" style="">
-              <h2 class="text-secondary text-justify px-4 pt-5" style=""><b><span class="bravarija">Schlosser&nbsp;</span><span class="gajanin">Gajanin</span> ist ein Familienunternehmen, das verschiedene Arten von Dienstleistungen im Bereich der Metallverarbeitung anbietet. <br></b></h2>
+              <h2 class="text-secondary text-justify px-4 pt-5" style=""><b><span class="bravarija">Schlosserei&nbsp;</span><span class="gajanin">Gajanin</span> ist ein Familienunternehmen, das verschiedene Arten von Dienstleistungen im Bereich der Metallverarbeitung anbietet. <br></b></h2>
               <h2 class="text-secondary text-justify px-2 pt-5" style="" contenteditable="true"><b>Wir fertigen und montieren Artikel aus INOX, schwarzer Hardware und Zaunsystemen.</b></h2>
             </div>
           </div>
@@ -114,7 +114,7 @@
         <img src="images/ograda.jpg" id="fence">
       </div>
       <div class="five columns services">
-        <p id="o-nama">Aus dem Angebot unserer Dienstleistungen heben wir Folgendes hervo:</p>
+        <p id="o-nama">Angebot beinhaltet unter anderem folgende Dienstleistungen an:</p>
         <ul class="text-body">
           <li><b>INOX Zäune</b></li>
           <li><b>Schmiedeeiserne Zäune</b></li>
