--- a/index-eng.html
+++ b/index-eng.html
@@ -98,7 +98,7 @@
               </div>
               <div class="row text-center justify-content-center">
                 <div class="col-md-11 text-center pt-3" style="">
-                  <h2 class="text-secondary text-justify px-5 pt-5" contenteditable="true"><b><span class="bravarija">Locksmith&nbsp;</span><span class="gajanin">Gajanin</span> is a family company that offers various types of services in the field of metal processing. <br><br> We manufacture and assemble items made of INOX, black hardware and fencing systems.</b></h2>
+                  <h2 class="text-secondary text-justify px-5 pt-5" ><b><span class="bravarija">Locksmith&nbsp;</span><span class="gajanin">Gajanin</span> is a family company that offers various types of services in the field of metal processing. <br><br> We manufacture and assemble items made of INOX, black hardware and fencing systems.</b></h2>
                 </div>
               </div>
             </div>
@@ -156,11 +156,11 @@
       <div class="row">
         <div class="six columns" id="contact-us">
           <h3 class="display-4 text-body"><span class="badge badge-light" style="">Kontaktirajte nas</span></h3>
-          <h2 contenteditable="true" class="py-2 pt-4"><i class="fa fa-phone"></i><br>+387 66025335 - Stefan<br>+49 1606326060 - Slobodan<br>+49 15731329371 - Dragoljub</h2>
+          <h2  class="py-2 pt-4"><i class="fa fa-phone"></i><br>+387 66025335 - Stefan<br>+49 1606326060 - Slobodan<br>+49 15731329371 - Dragoljub</h2>
           <a href="mailto:bravarijagajanin@gmail.com">
             <h2 class="py-2"><i class="fa fa-envelope"></i><br>bravarijagajaninbl@gmail.com</h2>
           </a>
-          <h2 contenteditable="true" class="py-2"><i class="fa fa-map"></i><br>Ulica 23. aprila br. 88, Trn, Laktaši</h2>
+          <h2  class="py-2"><i class="fa fa-map"></i><br>Ulica 23. aprila br. 88, Trn, Laktaši</h2>
         </div>
         <div class="six columns text-center">
           <br> <br> <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1373.9665141401963!2d17.246477818922322!3d44.85306108177554!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475e011900030df7%3A0x9cea8a47f7393c53!2sBravarija%20Gajanin!5e0!3m2!1ssr!2sba!4v1600712447387!5m2!1ssr!2sba" width="380" height="360" frameborder="0" style="border:0" allowfullscreen=""></iframe><br>
