--- a/index-ger.html
+++ b/index-ger.html
@@ -97,7 +97,7 @@
           <div class="row justify-content-center">
             <div class="col-md-11 mx-0" style="">
               <h2 class="text-secondary text-justify px-4 pt-5" style=""><b><span class="bravarija">Schlosserei&nbsp;</span><span class="gajanin">Gajanin</span> ist ein Familienunternehmen, das verschiedene Arten von Dienstleistungen im Bereich der Metallverarbeitung anbietet. <br></b></h2>
-              <h2 class="text-secondary text-justify px-2 pt-5" style="" contenteditable="true"><b>Wir fertigen und montieren Artikel aus INOX, schwarzer Hardware und Zaunsystemen.</b></h2>
+              <h2 class="text-secondary text-justify px-2 pt-5" style="" ><b>Wir fertigen und montieren Artikel aus INOX, schwarzer Hardware und Zaunsystemen.</b></h2>
             </div>
           </div>
         </div>
@@ -151,11 +151,11 @@
       <div class="row">
         <div class="six columns" id="contact-us">
           <h3 class="display-4 text-body"><span class="badge badge-light" style="">Kontaktiere uns</span></h3>
-          <h2 contenteditable="true" class="py-2 pt-4"><i class="fa fa-phone"></i><br>+387 66025335 - Stefan<br>+49 1606326060 - Slobodan<br>+49 15731329371 - Dragoljub</h2>
+          <h2  class="py-2 pt-4"><i class="fa fa-phone"></i><br>+387 66025335 - Stefan<br>+49 1606326060 - Slobodan<br>+49 15731329371 - Dragoljub</h2>
           <a href="mailto:bravarijagajanin@gmail.com">
             <h2 class="py-2"><i class="fa fa-envelope"></i><br>bravarijagajaninbl@gmail.com</h2>
           </a>
-          <h2 contenteditable="true" class="py-2"><i class="fa fa-map"></i><br>Nimberg, Munich und Frankfurt, Deutschland</h2>
+          <h2  class="py-2"><i class="fa fa-map"></i><br>Nimberg, Munich und Frankfurt, Deutschland</h2>
         </div>
         <div class="six columns text-center">
           <br> <br> <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2685988.2201926317!2d9.165203417545028!3d48.89566306008504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479f044c0fdf53a9%3A0x11d25a409387960!2sBavarska%2C%20Njema%C4%8Dka!5e0!3m2!1sbs!2sba!4v1601107775135!5m2!1sbs!2sba"  width="380" height="360" frameborder="0" style="border:0" allowfullscreen=""></iframe><br>
