--- a/index-first.html
+++ b/index-first.html
@@ -5,10 +5,10 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Bravarija Gajanin</title>
-  <meta name="description" content="Izrada i montaža građevinske bravarije, te izrada i montaža predmeta od INOX-a">
+  <title>Bravarija Gajanin - About Us</title>
+  <meta name="description" content="We manufacture and assemble items made of INOX, black hardware and fencing systems.">
   <meta name="author" content="Bravarija Gajanin">
-  <meta name="keywords" content="Izrada građevinske bravarije, montaža građevinske bravarije, izrada INOX-a, montaža predmeta od INOX-a">
+  <meta name="keywords" content="INOX, black hardware and fencing systems">
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
