Update and rename index-first.html to first.html

--- a/first.html
+++ b/first.html
@@ -33,7 +33,7 @@
     <div class="container">
       <div class="row">
         <div class="five columns">
-          <a href="index-english.html">
+          <a href="first.html">
             <h1 class="heading">Bravarija<span>Gajanin</span></h1>
           </a>
         </div>
@@ -49,7 +49,7 @@
                   <div class="dropdown-content">
                     <li><a href="index.html">SRB</a></li>
                     <li><a href="index-ger.html">GER</a></li>
-                    <li><a href="index-first.html">ENG</a></li>
+                    <li><a href="first.html">ENG</a></li>
                   </div>
                 </ul>
               </div>
