--- a/gallery-eng.html
+++ b/gallery-eng.html
@@ -36,12 +36,12 @@
     <div class="container">
       <div class="row">
         <div class="five columns">
-            <a href="index-first.html"><h1 class="heading">Bravarija<span>Gajanin</span></h1></a>
+            <a href="first.html"><h1 class="heading">Bravarija<span>Gajanin</span></h1></a>
         </div>
         <div class="seven columns">
           <ul>
-            <li><a href="index-first.html#o-nama" class="text-center">About us</a> </li>
-            <li><a href="index-first.html#contact-us" class="text-center">Contact</a> </li>
+            <li><a href="first.html#o-nama" class="text-center">About us</a> </li>
+            <li><a href="first.html#contact-us" class="text-center">Contact</a> </li>
             <li><a href="gallery.html" class="text-center">Gallery</a> </li>
             <li class=".dropdown-menu">
                 <div class="dropdown px-4">
@@ -50,7 +50,7 @@
                     <div class="dropdown-content">
                       <li><a href="index.html">SRB</a></li>
                       <li><a href="index-ger.html">GER</a></li>
-                      <li><a href="index-first.html">ENG</a></li>
+                      <li><a href="first.html">ENG</a></li>
                     </div>
                   </ul>
                 </div>
