--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Bravarija Gajanin - galerija</title>
+  <title>Bravarija Gajanin - Galerija</title>
   <meta name="description" content="Izrada i montaža građevinske bravarije, te izrada i montaža predmeta od INOX-a">
   <meta name="author" content="Bravarija Gajanin">
 
@@ -50,7 +50,7 @@
                     <div class="dropdown-content">
                       <li><a href="index.html">SRB</a></li>
                       <li><a href="index-ger.html">GER</a></li>
-                      <li><a href="index-first.html">ENG</a></li>
+                      <li><a href="first.html">ENG</a></li>
                     </div>
                   </ul>
                 </div>
