--- a/index-ger.html
+++ b/index-ger.html
@@ -5,10 +5,10 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Bravarija Gajanin</title>
-  <meta name="description" content="Izrada i montaža građevinske bravarije, te izrada i montaža predmeta od INOX-a">
+  <title>Bravarija Gajanin - Über uns</title>
+  <meta name="description" content="Wir fertigen und montieren Artikel aus INOX, schwarzer Hardware und Zaunsystemen.">
   <meta name="author" content="Bravarija Gajanin">
-  <meta name="keywords" content="Izrada građevinske bravarije, montaža građevinske bravarije, izrada INOX-a, montaža predmeta od INOX-a">
+  <meta name="keywords" content=" Artikel aus INOX, schwarzer Hardware,Zaunsystemen,Nimberg,Munich,Frankfurt,.">
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -49,7 +49,7 @@
                   <div class="dropdown-content">
                     <li><a href="index.html">SRB</a></li>
                     <li><a href="index-ger.html">GER</a></li>
-                    <li><a href="index-first.html">ENG</a></li>
+                    <li><a href="first.html">ENG</a></li>
                   </div>
                 </ul>
               </div>
