--- a/gallery-ger.html
+++ b/gallery-ger.html
@@ -5,11 +5,10 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Bravarija Gajanin - galerija</title>
-  <meta name="description" content="Izrada i montaža građevinske bravarije, te izrada i montaža predmeta od INOX-a">
+  <title>Bravarija Gajanin - Galerie</title>
+  <meta name="description" content="Wir fertigen und montieren Artikel aus INOX, schwarzer Hardware und Zaunsystemen.">
   <meta name="author" content="Bravarija Gajanin">
-
-  <meta name="keywords" content="Izrada građevinske bravarije, montaža građevinske bravarije, izrada INOX-a, montaža predmeta od INOX-a">
+  <meta name="keywords" content=" Artikel aus INOX, schwarzer Hardware,Zaunsystemen,Nimberg,Munich,Frankfurt">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -52,7 +51,7 @@
                       <div class="dropdown-content">
                         <li><a href="index.html">SRB</a></li>
                         <li><a href="index-ger.html">GER</a></li>
-                        <li><a href="index-first.html">ENG</a></li>
+                        <li><a href="first.html">ENG</a></li>
                       </div>
                     </ul>
                   </div>
