--- a/gallery-eng.html
+++ b/gallery-eng.html
@@ -6,10 +6,9 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>Bravarija Gajanin - Gallery</title>
-  <meta name="description" content="Izrada i montaža građevinske bravarije, te izrada i montaža predmeta od INOX-a">
+ <meta name="description" content="We manufacture and assemble items made of INOX, black hardware and fencing systems.">
   <meta name="author" content="Bravarija Gajanin">
-
-  <meta name="keywords" content="Izrada građevinske bravarije, montaža građevinske bravarije, izrada INOX-a, montaža predmeta od INOX-a">
+  <meta name="keywords" content="INOX, black hardware,fencing systems, Banja Luka, Laktasi, Ninberg, Munich"
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
