--- a/gallery-ger.html
+++ b/gallery-ger.html
@@ -6,9 +6,9 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>Bravarija Gajanin - Gallery</title>
- <meta name="description" content="We manufacture and assemble items made of INOX, black hardware and fencing systems.">
+<meta name="description" content="Wir fertigen und montieren Artikel aus INOX, schwarzer Hardware und Zaunsystemen.">
   <meta name="author" content="Bravarija Gajanin">
-  <meta name="keywords" content="INOX, black hardware,fencing systems, Banja Luka, Laktasi, Ninberg, Munich"
+  <meta name="keywords" content=" Artikel aus INOX, schwarzer Hardware,Zaunsystemen,Nimberg,Munich,Frankfurt">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
