--- a/gallery-ger.html
+++ b/gallery-ger.html
@@ -35,13 +35,13 @@
     <div class="container">
       <div class="row">
         <div class="five columns">
-            <a href="first.html"><h1 class="heading">Bravarija<span>Gajanin</span></h1></a>
+            <a href="index-ger.html"><h1 class="heading">Bravarija<span>Gajanin</span></h1></a>
         </div>
         <div class="seven columns">
           <ul>
-            <li><a href="first.html#o-nama" class="text-center">About us</a> </li>
-            <li><a href="first.html#contact-us" class="text-center">Contact</a> </li>
-            <li><a href="gallery.html" class="text-center">Gallery</a> </li>
+            <li><a href="index-ger.html#o-nama" class="text-center">Über uns</a> </li>
+            <li><a href="index-ger.html#contact-us" class="text-center">Kontakt</a> </li>
+            <li><a href="gallery-ger.html" class="text-center">Galerie</a></li>
             <li class=".dropdown-menu">
                 <div class="dropdown px-4">
                   <button class="dropbtn text-center justify-content-start align-items-start px-3 pb-5" style="">GER</button>
