--- a/gallery-ger.html
+++ b/gallery-ger.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Bravarija Gajanin - Gallery</title>
+  <title>Bravarija Gajanin - Galerie</title>
 <meta name="description" content="Wir fertigen und montieren Artikel aus INOX, schwarzer Hardware und Zaunsystemen.">
   <meta name="author" content="Bravarija Gajanin">
   <meta name="keywords" content=" Artikel aus INOX, schwarzer Hardware,Zaunsystemen,Nimberg,Munich,Frankfurt">
