--- a/gallery.html
+++ b/gallery.html
@@ -218,7 +218,7 @@
   
       <!-- Slika-->
       <div class="col-12 col-sm-6 col-lg-3 single_portfolio_item ">
-          <div class="portfolio-thumbnail pics-img" style="background-image: url(images/slika25.jpg);"></div>
+          <div class="portfolio-thumbnail pics-img" style="background-image: url(images/slika255.jpg);"></div>
       </div>
   
       <!-- Slika-->
@@ -417,6 +417,51 @@
                           <div class="portfolio-thumbnail pics-img" style="background-image: url(images/slika77.jpg);"></div>
                       </div>
 
+                         <!-- Slika-->
+   <div class="col-12 col-sm-6 col-lg-6 single_portfolio_item ">
+    <div class="portfolio-thumbnail pics-img" style="background-image: url(images/slika80.jpg);"></div>
+</div>
+    <!-- Slika-->
+    <div class="col-12 col-sm-6 col-lg-3 single_portfolio_item ">
+        <div class="portfolio-thumbnail pics-img" style="background-image: url(images/slika81.jpg);"></div>
+    </div>
+   <!-- Slika-->
+   <div class="col-12 col-sm-6 col-lg-3 single_portfolio_item ">
+    <div class="portfolio-thumbnail pics-img" style="background-image: url(images/slika82.jpg);"></div>
+</div>
+<div class="col-12 col-sm-6 col-lg-3 single_portfolio_item ">
+    <div class="portfolio-thumbnail pics-img" style="background-image: url(images/slika83.jpg);"></div>
+</div>
+    <!-- Slika-->
+    <div class="col-12 col-sm-6 col-lg-6 single_portfolio_item ">
+        <div class="portfolio-thumbnail pics-img" style="background-image: url(images/slika84.jpg);"></div>
+    </div>
+   <!-- Slika-->
+   <div class="col-12 col-sm-6 col-lg-3 single_portfolio_item ">
+    <div class="portfolio-thumbnail pics-img" style="background-image: url(images/slika85.jpg);"></div>
+</div>
+   <!-- Slika-->
+   <div class="col-12 col-sm-6 col-lg-3 single_portfolio_item ">
+    <div class="portfolio-thumbnail pics-img" style="background-image: url(images/slika86.jpg);"></div>
+</div>
+<div class="col-12 col-sm-6 col-lg-6 single_portfolio_item ">
+    <div class="portfolio-thumbnail pics-img" style="background-image: url(images/slika87.jpg);"></div>
+</div>
+    <!-- Slika-->
+    <div class="col-12 col-sm-6 col-lg-3 single_portfolio_item ">
+        <div class="portfolio-thumbnail pics-img" style="background-image: url(images/slika88.jpg);"></div>
+    </div>
+   <!-- Slika-->
+   <div class="col-12 col-sm-6 col-lg-3 single_portfolio_item ">
+    <div class="portfolio-thumbnail pics-img" style="background-image: url(images/slika89.jpg);"></div>
+</div>
+<div class="col-12 col-sm-6 col-lg-6 single_portfolio_item ">
+    <div class="portfolio-thumbnail pics-img" style="background-image: url(images/slika90.jpg);"></div>
+</div>
+    <!-- Slika-->
+    <div class="col-12 col-sm-6 col-lg-3 single_portfolio_item ">
+        <div class="portfolio-thumbnail pics-img" style="background-image: url(images/slika91.jpg);"></div>
+    </div>
         </div>
 
   <div class="back-to-top">
